--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
       - '80:8080'
     restart: always
     environment:
-      HASURA_GRAPHQL_DATABASE_URL: postgres://upar_postgres:EnUmAfT#2019@db.t2.micro:5432/upar
+      HASURA_GRAPHQL_DATABASE_URL: postgres://upar_postgres:EnUmAfT#2019@upar.cycxew4kba1d.ap-south-1.rds.amazonaws.com/upar
       HASURA_GRAPHQL_ACCESS_KEY: EnUmAfT@2019
     command:
       - graphql-engine
